[package]
name = "spomo"
version = "0.1.2"
edition = "2024"

[dependencies]
thiserror = "2.0.17"
error-stack = "0.6.0"
owo-colors = "4.2.3"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
regex = "1.12.1"
rodio = "0.21.1"