[package]
name = "spomo"
version = "0.2.2"
authors = ["Manuel Paccagnella <manuel.paccagnella@protonmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
thiserror = "2.0.17"
error-stack = "0.6.0"
owo-colors = "4.2.3"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
regex = "1.12.2"
rodio = "0.21.1"
chrono = "0.4.42"
ratatui = "0.29.0"
crossterm = "0.29.0"
